tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetTypes_Exception.fsx

#r "provider_EVIL_PROVIDER_GetTypes_Exception.dll"

open FSharp.EvilProviderWhereGetTypesRaisesException
